Make hasStatus optional (return conjunction when null)
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>